<resources>
    <string name="app_name">틈틈</string>
    <string name="bottom_menu_home">홈</string>
    <string name="bottom_menu_familar">친해지기</string>
    <string name="bottom_menu_mypage">마이페이지</string>
    <string name="more">더보기</string>
    <string name="home_share_concern_title">고민 나누기</string>
    <string name="home_share_concern_sub">직무, 커리어 고민을\n나눠보세요</string>
    <string name="home_work_title">모여서 각자 작업</string>
    <string name="home_work_sub">다같이 모여서\n작업해요!</string>
    <string name="home_study_title">스터디</string>
    <string name="home_study_sub">관심 분야 스터디로\n목표를 달성해요</string>
    <string name="home_project_title">사이드 프로젝트</string>
    <string name="home_project_sub">사이드 프로젝트\n팀을 구해보세요</string>
    <string name="home_floating_btn">모임생성으로 이동하는 버튼</string>
    <string name="webview_floating_btn">원래의 프래그먼트로 이동하는 버튼</string>
    <string name="onboarding_btn_start">시작하기</string>
    <string name="onboarding_tv_namecard_title">나를 대표하는\n소개서를 만들어보세요</string>
    <string name="onboarding_tv_namecard_subtitle">틈틈의 소개서 만들기 기능으로\n나를 대표하는 카드를 만들어보세요</string>
    <string name="onboarding_tv_meet_title">퇴근, 하교 후 자투리 시간에\nIT 갓생러들과 함께 만나요!</string>
    <string name="onboarding_tv_meet_subtitle">시간과 시간 사이\n여러분의 시간을 틈틈으로 채워보세요</string>
    <string name="onboarding_tv_networking_title">틈틈의 인증 시스템들로\n안전한 네트워킹을 즐겨보세요</string>
    <string name="onboarding_tv_networking_subtitle">회사/학교 인증, 지인 인증, 리뷰 등으로\n안전한 네트워킹을 즐겨보세요</string>
    <string name="shake_title_two">두 분의 관심사의 틈을 채워 대화주제를 조합하는 중이에요</string>
    <string name="shake_title_three">세 분의 관심사의 틈을 채워 대화주제를 조합하는 중이에요</string>
    <string name="shake_title_four">네 분의 관심사의 틈을 채워 대화주제를 조합하는 중이에요</string>
    <string name="shake_title_five">다섯 분의 관심사의 틈을 채워 대화주제를 조합하는 중이에요</string>
    <string name="onboarding_tv_access_location_title">위치 권한을 허용해주세요</string>
    <string name="onboarding_tv_access_location_subtitle">지역 기반 기능 사용 시 위치 권한이 필요합니다.</string>
    <string name="onboarding_tv_access_location_allow">허용</string>
    <string name="onboarding_tv_access_location_decline">허용 안함</string>
    <string name="signin_tv_kakao">카카오톡으로 시작하기</string>
    <string name="signin_tv_naver">네이버로 시작하기</string>
    <string name="signin_tv_fail_snackbar">소셜 로그인에 실패했습니다</string>
    <string name="signup_tv_terms_title">틈틈에 오신 것을 환영합니다</string>
    <string name="signup_tv_terms_subtitle">서비스 시작 및 가입을 위해서 먼저\n가입 및 정보 제공에 동의해 주세요.</string>
    <string name="signup_tv_terms_agree_all">전체동의</string>
    <string name="signup_tv_terms_agree_1">서비스 이용약관</string>
    <string name="signup_tv_terms_agree_2">개인정보 처리방침</string>
    <string name="signup_tv_terms_agree_3">위치 기반 서비스 이용 동의</string>
    <string name="signup_tv_terms_mandatory">(필수)</string>
    <string name="signup_btn_start">시작하기</string>
    <string name="signup_tv_card_intro_title">나만의 소개서를 만들어 봐요</string>
    <string name="signup_tv_card_intro_subtitle">모임에 참여할 때 나를 더 쉽게 소개할 수 있어요</string>
    <string name="signup_tv_move_card">카드를 클릭해 앞/뒷면을 확인해 보세요</string>
    <string name="signup_tv_character_title">프만님을 대표할 수 있는\n티미 캐릭터를 골라주세요</string>
    <string name="signup_btn_next">다음</string>
    <string name="signup_tv_name_title">이름을 입력해주세요</string>
    <string name="signup_tv_name_subtitle">틈틈은 신뢰 기반 커뮤니티로 실명으로\n대화하고 있어요</string>
    <string name="signup_tv_name_input">이름</string>
    <string name="signup_tv_name_hint">실명을 입력해주세요</string>
    <string name="signup_tv_name_caption">형식이 올바르지 않아요.</string>
    <string name="signup_tv_bday_title">생일이 언제인가요?</string>
    <string name="signup_tv_bday_subtitle">또래와 함께하는 맞춤형 모임을 추천해 드려요</string>
    <string name="signup_tv_bday_year">2000년</string>
    <string name="signup_tv_bday_month">01월</string>
    <string name="signup_tv_bday_date">01일</string>
    <string name="signup_tv_suffix_year">년</string>
    <string name="signup_tv_suffix_month">월</string>
    <string name="signup_tv_suffix_date">일</string>
    <string name="signup_tv_name_invalid">형식이 올바르지 않아요.</string>
    <string name="signup_tv_bday_invalid">생년월일 형식이 올바르지 않아요.</string>
    <string name="signup_tv_community_title">현재 어떤 상태인지\n알려주세요</string>
    <string name="signup_tv_community_input">상태</string>
    <string name="signup_tv_community_hint">선택해 주세요</string>
    <string name="signup_tv_community_modal_title">상태 입력</string>
    <string name="signup_tv_job_title">어떤 직업을 가지고\n있나요?</string>
    <string name="signup_tv_job_where_input">직장명</string>
    <string name="signup_tv_job_where_hint">직장명을 입력해 주세요</string>
    <string name="signup_tv_job_who_input">직군</string>
    <string name="signup_tv_job_who_hint">선택해 주세요</string>
    <string name="signup_tv_job_what_input">직무</string>
    <string name="signup_tv_job_what_hint">선택해 주세요</string>
    <string name="signup_tv_school_title">어떤 학교에\n다니고 계신가요?</string>
    <string name="signup_tv_school_input">학교명</string>
    <string name="signup_tv_school_hint">학교명을 입력해주세요</string>
    <string name="signup_tv_ready_title">어떤 직무를\n준비하고 계신가요?</string>
    <string name="signup_tv_area_title">관심 지역을\n선택해 주세요</string>
    <string name="signup_tv_area_subtitle">사는 지역이나 자주 찾는 지역을 선택해주세요</string>
    <string name="signup_tv_area_input">관심 지역</string>
    <string name="signup_tv_mbti_title">MBTI가\n무엇인가요?</string>
    <string name="signup_tv_mbti_input">MBTI</string>
    <string name="signup_tv_mbti_hint">선택해 주세요</string>
    <string name="signup_tv_interest_title">카드의 뒷면을 완성해\n나를 표현해 주세요!</string>
    <string name="signup_tv_interest_1">자기계발</string>
    <string name="signup_tv_interest_2">관심분야</string>
    <string name="signup_tv_interset_toast">최대 3개까지 선택할 수 있어요</string>
    <string name="signup_tv_area_modal_title">관심 지역</string>
    <string name="signup_tv_goal_title">틈틈을 이용해 달성하고\n싶은 목표를 알려주세요!</string>
    <string name="signup_tv_goal_subtitle_1">나는 틈틈을 통해</string>
    <string name="signup_tv_goal_subtitle_2">을 달성하고 싶어요</string>
    <string name="signup_tv_goal_hint">가고 싶은 회사에 취업하기</string>
    <string name="signup_tv_complete_title">소개서를 완성했어요!</string>
    <string name="signup_tv_complete_fix">수정할래요</string>
    <string name="signup_tv_complete_keep">마음에 들어요</string>
    <string name="signup_tv_fix_finish">수정완료</string>
    <string name="signup_tv_finish_title">가입을 완료했어요</string>
    <string name="signup_tv_finish_subtitle">또래와 함께하는 맞춤형 모임을 추천해드려요</string>
    <string name="signup_tv_go_home">홈으로 가기</string>
    <string name="signup_tv_card_trainee_job">준비중</string>
    <string name="alert_back_pressed_finish">\'뒤로\' 버튼을 두 번 누르면 종료됩니다</string>
    <string name="alert_back_pressed_signup">\'뒤로\' 버튼을 두 번 누르면 회원가입을 종료합니다</string>
    <string name="moim_topic_title">어떤 주제로 모임을 만들까요?</string>
    <string name="moim_next_btn">다음</string>
    <string name="moim_confirm_btn">모임 열기</string>
    <string name="moim_name_title">모임 이름을 작성해 주세요</string>
    <string name="moim_introduce_title">모임을 소개해 주세요</string>
    <string name="moim_introduce_system_text">모임 소개 글은 10자를 넘어야 합니다.</string>
    <string name="moim_introduce_title1_photo">사진 등록</string>
    <string name="moim_introduce_title2_photo">최대 5장</string>
    <string name="moim_introduce_system_photo">1장 이상의 사진을 필수로 등록해주세요.</string>
    <string name="moim_introduce_system_photo2">10mb 이하의 이미지(1장 이상 5개 이하)를 필수로 등록해 주세요.</string>
    <string name="moim_introduce_snackbar">파일 크기가 10MB를 초과합니다.</string>
    <string name="setting_pager1_title">내 모임</string>
    <string name="setting_pager1_top1">다가오는 모임</string>
    <string name="setting_my_moim_badge">내가 주최한 모임</string>
    <string name="setting_pager1_no_moim_text">신청한 모임이 없어요!</string>
    <string name="setting_pager1_no_moim_text2">참여한 모임이 없어요!</string>
    <string name="setting_pager1_go_to_moim">신청하기</string>
    <string name="setting_pager1_top2">참여 완료한 모임</string>
    <string name="setting_topbar">설정</string>
    <string name="modify_topbar">모임 수정하기</string>
    <string name="modify_title1">모임 주제</string>
    <string name="modify_title2">모임 이름</string>
    <string name="modify_title3">모임 소개</string>
    <string name="modify_title4">사진 등록</string>
    <string name="modify_title5">모임 날짜</string>
    <string name="modify_title6">모임 시간</string>
    <string name="modify_title7">도로명 주소</string>
    <string name="modify_title8">상세 주소</string>
    <string name="modify_title9">참여 인원</string>
    <string name="modify_placeholder1">선택해 주세요</string>
    <string name="modify_placeholder2">모임 이름을 작성해 주세요</string>
    <string name="modify_placeholder3">모임을 소개해 주세요</string>
    <string name="modify_placeholder4">사진 등록</string>
    <string name="modify_placeholder5">예) 1224 -> 12월 24일</string>
    <string name="modify_placeholder6">예) 1900 -> 오후 7:00</string>
    <string name="modify_placeholder7">예) 서울시 행운구 행복순환로1길 89</string>
    <string name="modify_placeholder8">예) 114동 106호</string>
    <string name="modify_placeholder9">선택해 주세요</string>
    <string name="modify_btn">수정 완료</string>
    <string name="setting_service_guide_topbar">약관 및 개인정보 처리 동의</string>
    <string name="setting_service_guide_title1">서비스 이용 약관</string>
    <string name="setting_service_guide_title2">개인정보 처리 방침</string>
    <string name="setting_my_info_edit_text">내 정보 수정하기</string>
    <string name="setting_my_info_edit_title1">이름</string>
    <string name="setting_my_info_edit_title2">생년월일</string>
    <string name="setting_my_info_edit_title3">가입방법</string>
    <string name="setting_my_info_edit_placeholder1">실명을 입력해주세요</string>
    <string name="setting_pager2_title">받은 리뷰</string>
    <string name="setting_pager2_very_good">최고예요!</string>
    <string name="setting_pager2_good">좋아요!</string>
    <string name="setting_pager2_sad">별로예요...</string>
    <string name="setting_pager3_title">북마크</string>
    <string name="setting_version_text">앱 버전</string>
    <string name="setting_ddabong_friend">님을 추천한 친구</string>
    <string name="setting_dialog_logout">정말 로그아웃 하시겠습니까?</string>
    <string name="setting_dialog_logout_btn1">취소</string>
    <string name="setting_dialog_logout_btn2">로그아웃</string>
    <string name="setting_dialog_cancel">참여를 정말 취소하시겠어요?</string>
    <string name="setting_dialog_delete">모임을 정말 삭제하시겠어요?</string>
    <string name="setting_dialog_report_title">신고하기</string>
    <string name="setting_dialog_report">해당 게시글을 신고할까요?</string>
    <string name="setting_dialog_report_btn1">취소하기</string>
    <string name="setting_dialog_report_btn2">신고하기</string>
    <string name="setting_dialog_default" />
    <string name="setting_dialog_cancel_btn1">돌아가기</string>
    <string name="setting_dialog_cancel_btn2">취소할래요</string>
    <string name="setting_dialog_delete_btn1">돌아가기</string>
    <string name="setting_dialog_delete_btn2">삭제할래요</string>
    <string name="setting_dialog_delete_row1">삭제하기</string>
    <string name="setting_dialog_delete_row2">수정하기</string>
    <string name="setting_dialog_moim_delete_success">모임 삭제를 성공했습니다</string>
    <string name="setting_dialog_moim_delete_failure">모임 삭제에 오류가 발생했습니다</string>
    <string name="group_meet_check_title">모두가 즐거운 틈틈이\n될 수 있도록 함께 지켜주세요</string>
    <string name="group_meet_check_first">모임 시작 전 부득이하게 참여가 어려워진 경우,\n반드시 호스트에게 미리 알려주세요.</string>
    <string name="group_meet_check_warning">무단으로 불참하거나, 함께하는 멤버들을\n존중하지 않고 피해를 주는 경우\n신고 제도를 통해 이용에 제재를 받게 됩니다.</string>
    <string name="group_meet_check_box_text">확인했습니다!</string>
    <string name="group_join">참여하기</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="front_card_mbti">MBTI</string>
    <string name="front_card_area">선택 지역에 사는</string>
    <string name="front_card_level">lv.3층</string>
    <string name="front_card_company">\@직장,학교명</string>
    <string name="front_card_name">디프만</string>
    <string name="back_card_goal_title">GOAL</string>
    <string name="back_card_goal_content">가고 싶은 회사에 취업해 프로덕트 디자이너로 일하고 싶어요</string>
    <string name="review_info_title">리뷰 남기기를 종료하시겠어요?</string>
    <string name="review_info_finish">종료할래요</string>
    <string name="review_info_back">돌아가기</string>
</resources>