<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="vm"
            type="com.teumteum.teumteum.presentation.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_tv_goal_title"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:paddingBottom="32dp"
            android:textAppearance="@style/ta.headline.3"
            android:lineSpacingExtra="3sp"
            android:textColor="?attr/color_text_headline_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_tv_goal_subtitle_1"
            android:layout_marginTop="28dp"
            android:textAppearance="@style/ta.headline.6"
            android:textColor="?attr/color_text_headline_secondary"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            />

        <EditText
            android:id="@+id/et_goal"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:gravity="start"
            android:padding="16dp"
            android:textAppearance="@style/ta.body.1"
            android:letterSpacing="-0.03125"
            android:lineSpacingExtra="5sp"
            android:textColor="?attr/color_text_body_primary"
            android:hint="@string/signup_tv_goal_hint"
            android:text="@{vm.goalText}"
            android:maxLines="3"
            android:lines="3"
            android:inputType="textMultiLine"
            android:maxLength="49"
            android:background="@drawable/shape_rect4_elevation_level01"
            android:textColorHint="?attr/color_text_body_quinary"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle1"
            />

        <TextView
            android:id="@+id/tv_subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_tv_goal_subtitle_2"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/ta.headline.6"
            android:textColor="?attr/color_text_headline_secondary"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/et_goal"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>